10_egress/blue-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: training
  name: blue
spec:
  hosts:
    - blue.training.svc.cluster.local
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: blue.training.svc.cluster.local
